fix the path for demo

--- a/views/index.html
+++ b/views/index.html
@@ -3,5 +3,5 @@
     This is again an angular tempalte for root of the app.
 </p>
 <p>
-  <a href="/nextpage">Link back to nextpage (with angular)</a>
+  <a href="./nextpage">Link back to nextpage (with angular)</a>
 </p>
